--- a/public/banklogs.html
+++ b/public/banklogs.html
@@ -5801,8 +5801,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 <section class="bg-img bg-animate" data-background="img/content/home7.jpg">
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="banklogs">
-            Bank Logs <img src="img/partners/table.png">
+        <a class="butn" id="vpn" href="download" style="letter-spacing: 1.7px !important;">
+            Download <img src="img/partners/cloud.png">
         </a>
     </div>
 
