--- a/public/banklogs.html
+++ b/public/banklogs.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
     <meta name="description" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
-    <title> Home Page </title>
+    <title> Bank Logs </title>
     <link rel="shortcut icon" id="nav1" href="img/logos/logo7.png">
     <link rel="apple-touch-icon" id="nav2" href="img/logos/logo7.png">
     <link rel="apple-touch-icon" sizes="72x72" id="nav3" href="img/logos/logo7.png">
@@ -39,7 +39,7 @@
             <a class="navbar-header"  data-bs-toggle="modal" data-bs-target="#vpnModal">
                 <img id="logo" src="img/partners/house.png">
                 <div class="jina-div">
-                    <input readonly id="jinaHolder" maxlength="17" value="Home Page">
+                    <input readonly id="jinaHolder" maxlength="17" value="Bank Logs">
                     <span id="jinaHolder2">
                         Cashout Method Guide
                     </span>
@@ -5959,7 +5959,6 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/platform/1.3.6/platform.min.js"></script>
     <script src="js/main/core.banklogs.js"></script>
     <script src="js/main/banklogs.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
