--- a/public/home.html
+++ b/public/home.html
@@ -39,9 +39,9 @@
             <a class="navbar-header"  data-bs-toggle="modal" data-bs-target="#vpnModal">
                 <img id="logo" src="img/partners/house.png">
                 <div class="jina-div">
-                    <input readonly id="jinaHolder" maxlength="17" value="Bank Logs">
+                    <input readonly id="jinaHolder" maxlength="17" value="Home Page">
                     <span id="jinaHolder2">
-                        Welcome to Darkweb
+                        Bank Logs Available
                     </span>
                 </div>
             </a>
@@ -747,7 +747,6 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
     <script src="js/main/core.home.js"></script>
     <script src="js/main/home.js"></script>
     <script src="datatables/js/jquery.datatable.min.js"></script>
