--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <div class="container-fluid infinite-floating thecont">
 
         <div class="row therow">
-            <div class="col-12 center-col banner-col display-none" style="text-align: center !important;">
+            <div class="col-12 center-col banner-col" style="text-align: center !important;">
                 <h1 class="banner-headline clip">
                     <span class="banner-words-wrapper">
                         <b class="is-visible">Bank Logs</b>
