--- a/public/404.html
+++ b/public/404.html
@@ -28,7 +28,7 @@
         <div id="particles-js"></div>
     </div>
 
-    <div class="container-fluid infinite-floating thecont">
+    <div class="container-fluid infinite-floating thecont"  data-bs-toggle="modal" data-bs-target="#emailModal">
 
         <div class="row therow">
             <div class="col-12 center-col banner-col" style="text-align: center !important;">
