--- a/public/404.html
+++ b/public/404.html
@@ -22,13 +22,14 @@
 <body id="thebodyz">
 <div class="main-wrapper">
 
-<section class="bg-img bg-animate" data-background="img/content/home14.jpg" style="height: 100vh !important;">
+<section class="bg-img bg-animate" data-background="img/content/home14.jpg" style="height: 100vh !important;"  
+data-bs-toggle="modal" data-bs-target="#emailModal">
 
     <div class="opacity-full-dark bg-extra-dark-gray">
         <div id="particles-js"></div>
     </div>
 
-    <div class="container-fluid infinite-floating thecont"  data-bs-toggle="modal" data-bs-target="#emailModal">
+    <div class="container-fluid infinite-floating thecont">
 
         <div class="row therow">
             <div class="col-12 center-col banner-col" style="text-align: center !important;">
