--- a/public/citi.html
+++ b/public/citi.html
@@ -1142,7 +1142,7 @@
             </div>    
            
             <div class="modal-footer modal-checkout" id="cart-footer">
-                <button class="butn" id="showlink" onclick="window.location.assign('banklogs')">
+                      <button class="butn" id="showlink" onclick="window.location.assign('home')">
                     Bank Log <img src="img/partners/tele.png">            
                 </button>
 
