--- a/public/huntington.html
+++ b/public/huntington.html
@@ -969,7 +969,7 @@
             </div>    
            
             <div class="modal-footer modal-checkout" id="cart-footer">
-                <button class="butn" id="showlink" onclick="window.location.assign('banklogs')">
+                        <button class="butn" id="showlink" onclick="window.location.assign('home')">
                     Bank Log <img src="img/partners/tele.png">            
                 </button>
 
