--- a/public/woodforest.html
+++ b/public/woodforest.html
@@ -979,7 +979,7 @@
             </div>    
            
             <div class="modal-footer modal-checkout" id="cart-footer">
-                <button class="butn" id="showlink" onclick="window.location.assign('banklogs')">
+                <button class="butn" id="showlink" onclick="window.location.assign('home')">
                     Bank Log <img src="img/partners/tele.png">            
                 </button>
 
