--- a/public/deposit.html
+++ b/public/deposit.html
@@ -18,7 +18,7 @@
     <link href="css/styles-8.css" rel="stylesheet" id="colors">
     <link href="css/plugins/app.css" rel="stylesheet">
     <link href="css/plugins/deposit.css" rel="stylesheet">
-    <link href="css/plugins/loads.css" rel="stylesheet">
+    <link href="css/plugins/load.css" rel="stylesheet">
 </head>
 <body id="thebodyz" style="background: #121d33;">
     <div id="preloader">
