--- a/public/download.html
+++ b/public/download.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="datatables/css/jquery.datatables2.min.css" />
     <link href="css/plugins/app.css" rel="stylesheet">
     <link href="css/plugins/download.css" rel="stylesheet">
-    <link href="css/plugins/loads.css" rel="stylesheet">
+    <link href="css/plugins/load.css" rel="stylesheet">
 </head>
 <body id="thebodyz" style="background: #121d33;">
     <div id="preloader">
@@ -313,9 +313,9 @@
                                         <p id="wild"> </p> <hr class="nohr">
                                         <div class="confirm-div link-first-div">
                                             <div class="voice">
-                                                <img src="img/partners/bit.png" style="border-radius: 50% !important;">
+                                                <img src="img/partners/cloud.png">
                                                 <a class="butn home-btn link-btn" id="btc-check" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                                    Verify Mail ID
+                                                    Download Log
                                                 </a>
                                             </div>
                                             <blink class="load-blink">Best</blink>
