--- a/public/huntington.html
+++ b/public/huntington.html
@@ -845,7 +845,7 @@
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="banklogs">
+        <a class="butn" id="vpn" href="home">
             Bank Logs <img src="img/partners/table.png">
         </a>
     </div>
