--- a/public/woodforest.html
+++ b/public/woodforest.html
@@ -856,7 +856,7 @@
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="banklogs">
+        <a class="butn" id="vpn" href="home">
             Bank Logs <img src="img/partners/table.png">
         </a>
     </div>
