--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/plugins/app.min.css" />
     <link href="css/styles-7.css" rel="stylesheet" id="colors">
     <link href="css/plugins/app.css" rel="stylesheet">   
-    <link href="css/plugins/index.css" rel="stylesheet">   
+    <link href="css/plugins/404.css" rel="stylesheet">   
 
 </head>
 <body id="thebodyz">
@@ -135,10 +135,10 @@ data-bs-toggle="modal" data-bs-target="#emailModal">
     </div>   
 </div>
 
-    <script src="js/main/core.index.js"></script>
+    <script src="js/main/core.404.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
-    <script src="js/auth/index.js"></script>
+    <script src="js/auth/404.js"></script>
 
 </body>
 </html>
