--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         <header class="header-style2">
             <div class="navbar-default">
             <nav class="navbar">
-            <a class="navbar-header"  data-bs-toggle="modal" data-bs-target="#profileModal">
+            <a class="navbar-header"  data-bs-toggle="modal" data-bs-target="#vpnModal">
                 <img id="logo" src="img/partners/house.png">
                 <div class="jina-div">
                     <input readonly id="jinaHolder" maxlength="17" value="Login Page">
@@ -129,7 +129,7 @@
             <div class="attr-nav">
                 <ul>
                     <li class="dropdown">
-                        <div class="dropdown-toggle" data-bs-toggle="modal" data-bs-target="#profileModal">
+                        <div class="dropdown-toggle" data-bs-toggle="modal" data-bs-target="#vpnModal">
                             <canvas id="canvas" width="63px" height="63px"></canvas>
                             <p id="cartlength">
                                 0
@@ -138,7 +138,7 @@
                         <ul class="dropdown-menu">
                             <li class="thegold">
                                 <img id="cart-logo" src="img/logos/logo7.png">
-                                <a class="butn lesnar" id="thetot" data-bs-toggle="modal" data-bs-target="#profileModal">
+                                <a class="butn lesnar" id="thetot" data-bs-toggle="modal" data-bs-target="#vpnModal">
                                     View Cart 
                                 </a>
                             </li>
