--- a/public/download.html
+++ b/public/download.html
@@ -33,7 +33,7 @@
         <header class="header-style2">
             <div class="navbar-default">
             <nav class="navbar">
-            <a class="navbar-header"  data-bs-toggle="modal" data-bs-target="#vpnModal">
+            <a class="navbar-header" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <img id="logo" src="img/partners/cloud.png">
                 <div class="jina-div">
                     <input readonly id="jinaHolder" maxlength="17" value="Download PDF">
