--- a/public/citi.html
+++ b/public/citi.html
@@ -1019,7 +1019,7 @@
 
     <div class="vpn-section">
         <a class="butn" id="vpn" href="home">
-            Bank Logs <img src="img/partners/table.png">
+            Home Page <img src="img/partners/table.png">
         </a>
     </div>
 
