--- a/public/wellsfargo.html
+++ b/public/wellsfargo.html
@@ -767,7 +767,7 @@
 
     <div class="vpn-section">
         <a class="butn" id="vpn" href="home">
-            Bank Logs <img src="img/partners/table.png">
+            Home Page <img src="img/partners/table.png">
         </a>
     </div>
 
