--- a/public/home.html
+++ b/public/home.html
@@ -174,7 +174,7 @@
 
 
 
-<section class="bg-img bg-animate" data-background="img/content/home7.jpg">
+<section id="sales" class="bg-img bg-animate" data-background="img/content/home7.jpg">
 
     <div class="opacity-full-dark bg-extra-dark-gray">
         <div id="particles-js"></div>
