--- a/public/deposit.html
+++ b/public/deposit.html
@@ -450,8 +450,8 @@
 
 
     <div class="vpn-section" style="margin-top: -50px !important;">
-        <a class="butn" id="vpn" href="download">
-            Bank Login <img src="img/partners/cloud.png">
+        <a class="butn" id="vpn" href="download" style="letter-spacing: 1.7px !important;">
+            Download <img src="img/partners/cloud.png">
         </a>
     </div>
 
