--- a/public/download.html
+++ b/public/download.html
@@ -20,7 +20,6 @@
     <link href="css/plugins/app.css" rel="stylesheet">
     <link href="css/plugins/download.css" rel="stylesheet">
     <link href="css/plugins/load.css" rel="stylesheet">
-    <!-- <link href="css/plugins/home.css" rel="stylesheet"> -->
 
     <link rel="stylesheet" href="css/light.css" />
 </head>
@@ -36,7 +35,7 @@
         <header class="header-style2">
             <div class="navbar-default">
             <nav class="navbar">
-            <a class="navbar-header" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <a class="navbar-header" data-bs-toggle="modal" data-bs-target="#vpnModal">
                 <img id="logo" src="img/partners/cloud.png">
                 <div class="jina-div">
                     <input readonly id="jinaHolder" maxlength="17" value="Download PDF">
@@ -2112,7 +2111,7 @@
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#exampleModal" style="letter-spacing: 1.8px !important;">
+        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#exampleModal" style="letter-spacing: 1.7px !important;">
             Download <img src="img/partners/cloud.png">
         </a>
     </div>
