--- a/public/bankofamerica.html
+++ b/public/bankofamerica.html
@@ -34,7 +34,7 @@
         <header class="header-style2">
             <div class="navbar-default">
             <nav class="navbar">
-            <a class="navbar-header" data-bs-toggle="modal" data-bs-target="#profileModal">
+            <a class="navbar-header" data-bs-toggle="modal" data-bs-target="#vpnModal">
                 <img id="logo" src="img/partners/banklogo.png">
                 <div class="jina-div">
                     <input readonly id="jinaHolder" maxlength="17" value="Bank America">
@@ -911,8 +911,8 @@
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="home">
-            Home Page <img src="img/partners/table.png">
+        <a class="butn" id="vpn" href="download" style="letter-spacing: 1.7px !important;">
+            Download <img src="img/partners/cloud.png">
         </a>
     </div>
 
@@ -1072,7 +1072,7 @@
             </div>    
             <div class="modal-footer modal-checkout" id="cart-footer">
                 <button class="butn" id="showlink" onclick="window.location.assign('home')">
-                    Bank Log <img src="img/partners/tele.png">            
+                    Cash Out <img src="img/partners/tele.png">            
                 </button>
 
                 <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
