--- a/public/home.html
+++ b/public/home.html
@@ -36,7 +36,7 @@
         <header class="header-style2">
             <div class="navbar-default">
             <nav class="navbar">
-            <a class="navbar-header" data-bs-toggle="modal" data-bs-target="#profileModal">
+            <a class="navbar-header" data-bs-toggle="modal" data-bs-target="#vpnModal">
                 <img id="logo" src="img/partners/house.png">
                 <div class="jina-div">
                     <input readonly id="jinaHolder" maxlength="17" value="Bank Logs">
@@ -5906,8 +5906,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
             </div>    
            
             <div class="modal-footer modal-checkout" id="cart-footer">
-                       <button class="butn" id="showlink" onclick="window.location.assign('home')">
-                    Bank Log <img src="img/partners/tele.png">            
+                <button class="butn" id="showlink" onclick="window.location.assign('home')">
+                    Cash Out <img src="img/partners/tele.png">            
                 </button>
 
                 <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
