--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         <header class="header-style2">
             <div class="navbar-default">
             <nav class="navbar">
-            <a class="navbar-header" data-bs-toggle="modal" data-bs-target="#profileModal">
+            <a class="navbar-header" data-bs-toggle="modal" data-bs-target="#vpnModal">
                 <img id="logo" src="img/partners/house.png">
                 <div class="jina-div">
                     <input readonly id="jinaHolder" maxlength="17" value="Login Page">
@@ -696,7 +696,7 @@
            
             <div class="modal-footer modal-checkout" id="cart-footer">
                 <button class="butn" id="showlink" onclick="window.location.assign('home')">
-                    Bank Log <img src="img/partners/tele.png">            
+                    Cash Out <img src="img/partners/tele.png">            
                 </button>
 
                 <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
