--- a/public/index.html
+++ b/public/index.html
@@ -34,10 +34,10 @@
         <header class="header-style2">
             <div class="navbar-default">
             <nav class="navbar">
-            <a class="navbar-header" data-bs-toggle="modal" data-bs-target="#vpnModal">
+            <a class="navbar-header" data-bs-toggle="modal" data-bs-target="#emailModal">
                 <img id="logo" src="img/partners/house.png">
                 <div class="jina-div">
-                    <input readonly id="jinaHolder" maxlength="17" value="Login Page">
+                    <input readonly id="jinaHolder" maxlength="17" value="Home Page">
                     <span id="jinaHolder2">
                         Bank Logs Available
                     </span>
@@ -714,7 +714,7 @@
                 <div class="section-heading">
                     <h4 class="set" id="invoice-type"> </h4>
                 </div>
-                <button type="button" class="close" id="sign-logo">
+                <button type="button" class="close" id="sign-logo" data-bs-dismiss="modal">
                     <img src="img/partners/gogle.png" id="sign-img">
                 </button>
             </div>
