--- a/public/truist.html
+++ b/public/truist.html
@@ -1427,7 +1427,7 @@
     <script src="js/main/main.js"></script>
     <script src="js/auth/auth.js"></script>
     <script src="datatables/js/jquery.datatable2.min.js"></script>
-    <script src="js/cart/add.js"></script>
+    <script src="js/cart/cart.js"></script>
     <script src="js/rev_slider/jquery.themepunch.revolution.min.js"></script>
 </body>
 </html>
