--- a/public/bankofamerica.html
+++ b/public/bankofamerica.html
@@ -496,7 +496,7 @@
 
 
 
-<section id="cd-time" class="parallax cd-container" data-background="img/wall/bankofamerica.jpg" data-scroll-index="5" style="padding: 0; margin: 0;">
+<section id="cd-time" class="parallax cd-container" data-background="img/wall/bankofamerica.jpg" data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
     <div class="infinite-floating therow portfolio-gallery">
 
