--- a/public/chime.html
+++ b/public/chime.html
@@ -610,7 +610,7 @@
 
 
 <!-- start contact info section -->
-<section id="cd-time" class="parallax cd-container" data-background="img/wall/chimes.jpg" data-scroll-index="5" style="padding: 0; margin: 0;">
+<section id="cd-time" class="parallax cd-container" data-background="img/wall/chimes.jpg" data-scroll-index="5" style="padding: 0; margin: 0; display: none !important;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
     <div class="infinite-floating therow portfolio-gallery">
 
