--- a/public/huntington.html
+++ b/public/huntington.html
@@ -500,7 +500,7 @@
 
 
 <!-- start contact info section -->
-<section id="cd-time" class="parallax cd-container" data-background="img/wall/huntington.jpg" data-scroll-index="5" style="padding: 0; margin: 0;">
+<section id="cd-time" class="parallax cd-container" data-background="img/wall/huntington.jpg" data-scroll-index="5" style="padding: 0; margin: 0;  display: none;">
     <div class="opacity-full-dark bg-extra-dark-gray"></div>
     <div class="infinite-floating therow portfolio-gallery">
 
