--- a/public/wellsfargo.html
+++ b/public/wellsfargo.html
@@ -925,8 +925,8 @@
                 </div>
             </div>    
             <div class="modal-footer modal-checkout" id="cart-footer">
-                <button class="butn" id="showlink" onclick="window.location.assign('home')">
-                    Cash Out <img src="img/partners/tele.png">            
+                <button class="butn" id="showlink" data-bs-toggle="modal" data-bs-target="#saveModal">
+                    Mail Link <img src="img/partners/tele.png">            
                 </button>
 
                 <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
