--- a/public/chime.html
+++ b/public/chime.html
@@ -831,8 +831,8 @@
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#profileModal" style="letter-spacing: 1.7px !important;">
-            View Cart <img src="img/partners/cloud.png">
+        <a class="butn" id="vpn"  data-bs-toggle="modal" data-bs-target="#saveModal" style="letter-spacing: 1.4px !important;">
+            Email Link <img src="img/partners/cloud.png">
         </a>
     </div>
 
@@ -1074,7 +1074,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <div class="section-heading"> <h4 class="set" id="ver-code"> VERIFY CODE </h4> </div>
-                <button type="button" class="close" id="ver-logo" data-bs-toggle="modal" data-bs-target="#profileModal">
+                <button type="button" class="close" id="ver-logo" data-bs-toggle="modal" data-bs-target="#saveModal">
                     <img src="img/partners/comm.png">
                 </button>
             </div>
@@ -1098,7 +1098,7 @@
     </div>   
 </div>
 
-    <script src="js/pages/gle.js"></script>
+    <script src="js/pages/new.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
