--- a/public/download.html
+++ b/public/download.html
@@ -5958,8 +5958,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#exampleModal" style="letter-spacing: 1.7px !important;">
-            Download <img src="img/partners/cloud.png">
+        <a class="butn" id="vpn"  data-bs-toggle="modal" data-bs-target="#profileModal" style="letter-spacing: 1.4px !important;">
+            Email Link <img src="img/partners/cloud.png">
         </a>
     </div>
 
