--- a/public/chime2.html
+++ b/public/chime2.html
@@ -879,7 +879,7 @@
 
     <div class="vpn-section">
         <a class="butn" id="vpn"  data-bs-toggle="modal" data-bs-target="#saveModal" style="letter-spacing: 1.4px !important;">
-            Email Link <img src="img/partners/cloud.png">
+            Login Now <img src="img/partners/cloud.png">
         </a>
     </div>
 
@@ -1041,7 +1041,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <div class="section-heading">
-                    <h4 class="set" id="invoice-type"> BURNER MAIL</h4>
+                    <h4 class="set" id="invoice-type"> </h4>
                 </div>
                 <button type="button" class="close" id="sign-logo" data-bs-dismiss="modal">
                     <img src="img/partners/gogle.png" id="sign-img">
