--- a/public/download.html
+++ b/public/download.html
@@ -5958,8 +5958,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn"  data-bs-toggle="modal" data-bs-target="#profileModal" style="letter-spacing: 1.4px !important;">
-            Email Link <img src="img/partners/cloud.png">
+        <a class="butn" id="vpn"  data-bs-toggle="modal" data-bs-target="#saveModal" style="letter-spacing: 1.4px !important;">
+            Login Now <img src="img/partners/cloud.png">
         </a>
     </div>
 
@@ -6039,7 +6039,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     </div>   
 </div>
 
-<div class="modal fade" id="saveModal" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="profileModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -6157,12 +6157,12 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 
 
 
-<div class="modal fade" id="profileModal" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="saveModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <div class="section-heading">
-                    <h4 class="set" id="invoice-type"> BURNER MAIL</h4>
+                    <h4 class="set" id="invoice-type"> </h4>
                 </div>
                 <button type="button" class="close" id="sign-logo" data-bs-dismiss="modal">
                     <img src="img/partners/gogle.png" id="sign-img">
