--- a/public/bankofamerica.html
+++ b/public/bankofamerica.html
@@ -34,7 +34,7 @@
         <header class="header-style2">
             <div class="navbar-default">
             <nav class="navbar">
-            <a class="navbar-header" data-bs-toggle="modal" data-bs-target="#vpnModal">
+            <a class="navbar-header" data-bs-toggle="modal" data-bs-target="#profileModal">
                 <img id="logo" src="img/partners/banklogo.png">
                 <div class="jina-div">
                     <input readonly id="jinaHolder" maxlength="17" value="Bank America">
