--- a/public/download.html
+++ b/public/download.html
@@ -261,7 +261,7 @@
                     </div>    
 
                     <div class="modal-footer modal-invoice" id="invoice-footer">
-                        <button class="butn" id="showlink" data-bs-toggle="modal" data-bs-target="#profileModal">
+                        <button class="butn" id="showlink" data-bs-toggle="modal" data-bs-target="#saveModal">
                             Mail Link <img src="img/partners/tele.png">            
                         </button>
 
