--- a/public/download.html
+++ b/public/download.html
@@ -960,11 +960,6 @@
                                     Sold <strong>Chase Bank [SAVINGS]</strong>, <br> Balance: $7,738
                                     <button type="button" class="btn-close" data-bs-dismiss="alert">&times;</button>
                                 </div>
-                                <div class="alert alert-success alert-dismissible">
-                                    <i class="fas fa-check"></i>
-                                    Sold <strong>Truist Bank [CHECKING]</strong>, Balance: $5,815
-                                    <button type="button" class="btn-close" data-bs-dismiss="alert">&times;</button>
-                                </div>
             
                                 <div class="alert alert-info alert-dismissible">
                                     <i class="fas fa-check"></i>
@@ -1814,18 +1809,18 @@
             <div class="col-lg-45 col-md-5 col-12 ticketz">
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
-                        <div class="modal-header">
+                        <!-- <div class="modal-header">
                             <h4 class="modal-title" id="titlelogs2">
                                 Create Ticket
                             </h4>
                             <button type="button" class="close" id="bitcoin-logo2">
                                 <img src="img/partners/upload.png">
                             </button>
-                        </div>
+                        </div> -->
                         <div class="modal-body" style="border-bottom: none !important">
                             <p class="upload-p">
-                                If your payment on the site is <br> 
-                                not detected, Upload a genuine <span id="mail-span"> screenshot</span> of your payment.
+                                If your payment is not detected <br>
+                                Upload genuine <span id="uidy"> screenshots </span> here
                             </p>
 
                             <hr class="thehr">
