--- a/public/download.html
+++ b/public/download.html
@@ -194,7 +194,7 @@
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped bg-success" id="pablos" style="width: 100%;">
                                 <span id="escoz">
-                                    Time Left: 20:00
+                                    Time Left: 15:00
                                 </span>
                             </div>
                         </div>
@@ -1809,18 +1809,18 @@
             <div class="col-lg-45 col-md-5 col-12 ticketz">
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
-                        <!-- <div class="modal-header">
+                        <div class="modal-header">
                             <h4 class="modal-title" id="titlelogs2">
                                 Create Ticket
                             </h4>
                             <button type="button" class="close" id="bitcoin-logo2">
                                 <img src="img/partners/upload.png">
                             </button>
-                        </div> -->
+                        </div>
                         <div class="modal-body" style="border-bottom: none !important">
                             <p class="upload-p">
-                                If your payment is not detected <br>
-                                Upload genuine <span id="uidy"> screenshots </span> here
+                                If your payment is not detected, <br>
+                                Upload genuine <span id="uidy"> screenshots </span>.
                             </p>
 
                             <hr class="thehr">
