--- a/public/download.html
+++ b/public/download.html
@@ -935,7 +935,7 @@
             </div>
 
 
-            <div class="col-lg-45 col-md-5 col-12 ticketz">
+            <div class="col-lg-45 col-md-5 col-12 sm-display-none ticketz">
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
                         <div class="modal-header">
@@ -1890,7 +1890,7 @@
 
 
 
-            <div class="col-lg-65 col-12">
+            <div class="col-lg-65 col-12 sm-display-none">
 
                 <div class="owl-carousel owl-theme"  id="services-carousel" style="margin: 20px auto 5px !important;">
 
