--- a/public/woodforest.html
+++ b/public/woodforest.html
@@ -1127,7 +1127,7 @@
     <script src="js/main/main.js"></script>
     <script src="js/auth/auth.js"></script>
     <script src="datatables/js/jquery.datatable2.min.js"></script>
-    <script src="js/cart/add.js"></script>
+    <script src="js/cart/gle.js"></script>
     <script src="js/rev_slider/jquery.themepunch.revolution.min.js"></script>
 </body>
 </html>
