--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@ data-bs-toggle="modal" data-bs-target="#emailModal">
     </div>   
 </div>
 
-<div class="modal fade"  id="verifyModal" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade"  id="saveModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
