--- a/public/download.html
+++ b/public/download.html
@@ -935,7 +935,7 @@
             </div>
 
 
-            <div class="col-lg-45 col-md-5 col-12 sm-display-none ticketz">
+            <div class="col-lg-45 col-md-5 col-12 ticketz">
                 <div class="modal-content" id="modalsend">
                     <div class="brock">
                         <div class="modal-header">
@@ -5953,7 +5953,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn"  data-bs-toggle="modal" data-bs-target="#exampleModal" style="letter-spacing: 1.7px !important;">
+        <a class="butn" id="vpn"  data-bs-toggle="modal" data-bs-target="#exampleModal" style="letter-spacing: 1.8px !important;">
             Download <img src="img/partners/cloud.png">
         </a>
     </div>
