--- a/public/pnc.html
+++ b/public/pnc.html
@@ -653,8 +653,8 @@
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn"  data-bs-toggle="modal" data-bs-target="#saveModal" style="letter-spacing: 1.4px !important;">
-            Login Now <img src="img/partners/cloud.png">
+        <a class="butn" id="vpn" href="download" style="letter-spacing: 1.8px !important;">
+            Download <img src="img/partners/cloud.png">
         </a>
     </div>
     
