--- a/public/pnc.html
+++ b/public/pnc.html
@@ -811,13 +811,13 @@
                     </table>
                 </div>
             </div>    
-            <div class="modal-footer modal-checkout" id="cart-footer">
-                <button class="butn" id="showlink"  onclick="window.location.assign('home')">
-                    Cash Out <img src="img/partners/tele.png">            
+            <div id="invoice-footer">
+                <button class="butn sm-display-none" id="showlink"  onclick="window.location.assign('home')">
+                    Cashout Guide <img src="img/partners/tele.png">            
                 </button>
 
-                <button class="butn" id="showtoasts"  onclick="window.location.assign('download')">
-                    Download <i class="fas fa-angle-down"></i>
+                <button class="butn" id="showtoasts" onclick="window.location.assign('download')">
+                    Download Link <i class="fas fa-angle-down"></i>
                 </button>
             </div>
         </div>
