--- a/public/404.html
+++ b/public/404.html
@@ -15,7 +15,7 @@
   
     <link rel="stylesheet" href="css/plugins/app.min.css" />
     <link href="css/styles-7.css" rel="stylesheet" id="colors">
-    <link href="css/plugins/app.css" rel="stylesheet">   
+    <link href="css/plugins/apps.css" rel="stylesheet">   
     <link href="css/plugins/login.css" rel="stylesheet">   
 
 </head>
