--- a/public/deposit.html
+++ b/public/deposit.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/plugins/nav-menu.css" />
 
     <link href="css/styles-8.css" rel="stylesheet" id="colors">
-    <link href="css/plugins/app.css" rel="stylesheet">
+    <link href="css/plugins/apps.css" rel="stylesheet">
     <link href="css/plugins/deposit.css" rel="stylesheet">
     <link href="css/plugins/load.css" rel="stylesheet">
 </head>
