--- a/public/home.html
+++ b/public/home.html
@@ -263,7 +263,7 @@
                         </a>
                     </h4>
                 </div>
-                <blink>Best</blink>
+                <blink>New</blink>
             </div>
         
 
