--- a/public/404.html
+++ b/public/404.html
@@ -22,8 +22,7 @@
 <body id="thebodyz">
 <div class="main-wrapper">
 
-<section class="bg-img bg-animate" data-background="img/content/home14.jpg" style="height: 100vh !important;"  
-data-bs-toggle="modal" data-bs-target="#emailModal">
+<section class="bg-img bg-animate" data-background="img/content/home14.jpg" style="height: 100vh !important;">
 
     <div class="opacity-full-dark bg-extra-dark-gray">
         <div id="particles-js"></div>
@@ -38,8 +37,8 @@ data-bs-toggle="modal" data-bs-target="#emailModal">
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#emailModal">
-            Login Now <img src="img/partners/user.png">
+        <a class="butn" id="vpn" href="index">
+            Home Page <img src="img/partners/user.png">
         </a>
     </div>
 
