--- a/public/bankofamerica.html
+++ b/public/bankofamerica.html
@@ -144,14 +144,14 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/house.png">
+                                <img src="img/partners/grad.png">
                                 <a class="butn gold" href="home">
-                                    Home Page
+                                    Cashout ID
                                 </a>
                             </li>
                             <li class="thegold">
                                 <img src="img/partners/check.png">
-                                <a class="butn gold" id="vpn-nav" data-bs-toggle="modal" data-bs-target="#vpnModal">
+                                <a class="butn gold" id="vpn-nav"  data-bs-toggle="modal" data-bs-target="#vpnModal">
                                     My Profile
                                 </a>
                             </li>
