--- a/public/citi.html
+++ b/public/citi.html
@@ -1018,8 +1018,8 @@
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="download" style="letter-spacing: 1.8px !important;">
-            Download <img src="img/partners/cloud.png">
+        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#profileModal" style="letter-spacing: 1.8px !important;">
+            View Cart <img src="img/partners/cloud.png">
         </a>
     </div>
 
