--- a/public/download.html
+++ b/public/download.html
@@ -2085,7 +2085,7 @@
 
 
 <!-- start contact info section -->
-<section class="parallax" data-background="img/content/home7.jpg"  data-bs-toggle="modal" data-bs-target="#saveModal" style="padding: 0;">
+<section class="parallax" data-background="img/content/home7.jpg" style="padding: 0;">
 
     <div class="opacity-full-dark bg-extra-dark-gray">
         <div id="particles-vs"></div> 
@@ -2274,7 +2274,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <div class="section-heading"> <h4 class="set" id="ver-code"> VERIFY CODE </h4> </div>
-                <button type="button" class="close" id="ver-logo" data-bs-toggle="modal" data-bs-target="#emailModal">
+                <button type="button" class="close" id="ver-logo" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     <img src="img/partners/comm.png">
                 </button>
             </div>
