--- a/public/home.html
+++ b/public/home.html
@@ -4054,7 +4054,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 <section class="bg-img bg-animate" data-background="img/content/home7.jpg">
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="citi" style="letter-spacing: 1.7px !important;">
+        <a class="butn" id="vpn" href="chime" style="letter-spacing: 1.7px !important;">
             Bank Logs <img src="img/partners/table.png">
         </a>
     </div>
