--- a/public/index.html
+++ b/public/index.html
@@ -576,7 +576,7 @@
 <section class="bg-img bg-animate" data-background="img/content/home7.jpg">
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" href="chime" style="letter-spacing: 1.7px !important;">
+        <a class="butn" id="vpn" href="wellsfargo" style="letter-spacing: 1.7px !important;">
             Bank Logs <img src="img/partners/table.png">
         </a>
     </div>
