--- a/public/bankofamerica.html
+++ b/public/bankofamerica.html
@@ -144,9 +144,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/grad.png">
+                                <img src="img/partners/house.png">
                                 <a class="butn gold" href="home">
-                                    Cashout ID
+                                    Home Page
                                 </a>
                             </li>
                             <li class="thegold">
