--- a/public/home.html
+++ b/public/home.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
     <meta name="description" content="Bank Logs Dark Net Shop Market Legit Banklogs Bank Logins" />
-    <title> Cashout Methods </title>
+    <title> Home Page </title>
     <link rel="shortcut icon" id="nav1" href="img/logos/logo7.png">
     <link rel="apple-touch-icon" id="nav2" href="img/logos/logo7.png">
     <link rel="apple-touch-icon" sizes="72x72" id="nav3" href="img/logos/logo7.png">
@@ -39,9 +39,9 @@
             <a class="navbar-header" data-bs-toggle="modal" data-bs-target="#profileModal">
                 <img id="logo" src="img/partners/house.png">
                 <div class="jina-div">
-                    <input readonly id="jinaHolder" maxlength="17" value="CashOut ID">
+                    <input readonly id="jinaHolder" maxlength="17" value="Home Page">
                     <span id="jinaHolder2">
-                        Method Guide Tutotrials
+                        Tickets Resolved
                     </span>
                 </div>
             </a>
@@ -146,9 +146,9 @@
                                 </a>
                             </li>
                             <li class="thegold">
-                                <img src="img/partners/grad.png">
+                                <img src="img/partners/house.png">
                                 <a class="butn gold" href="home">
-                                    Cashout ID
+                                    Home Page
                                 </a>
                             </li>
                             <li class="thegold">
@@ -182,33 +182,6 @@
 
     <div class="container-fluid thecont">
 
-    </div>
-</section>
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<section class="bg-img bg-animate" id="screen-shot" data-background="img/content/home7.jpg">
-
-    <div class="container-fluid">
         <div class="row">        
 
 
