--- a/public/download.html
+++ b/public/download.html
@@ -4839,7 +4839,7 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
 
 
 <!-- start contact info section -->
-<section class="parallax" data-background="img/content/home7.jpg" style="padding: 0;"  data-bs-toggle="modal" data-bs-target="#exampleModal">
+<section class="parallax" data-background="img/content/home7.jpg" style="padding: 0;">
 
     <div class="opacity-full-dark bg-extra-dark-gray">
         <div id="particles-vs"></div> 
@@ -4850,8 +4850,8 @@ data-scroll-index="5" style="padding: 0; margin: 0; display: none;">
     </div>
 
     <div class="vpn-section">
-        <a class="butn" id="vpn" data-bs-toggle="modal" data-bs-target="#exampleModal" style="letter-spacing: 1.8px !important;">
-            Download <img src="img/partners/cloud.png">
+        <a class="butn" id="vpn" href="home" style="letter-spacing: 1.8px !important;">
+            Home Page <img src="img/partners/table.png">
         </a>
     </div>
 
